--- a/react-sample-app/index.html
+++ b/react-sample-app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="chatMeApp">
+<html ng-app="sampleApp">
 <head>
 	<title>Home</title>	
   <script src="js/bootstrap.min.js"></script>
@@ -26,7 +26,7 @@
             </div>
             </nav>
         </header>
-<body ng-controller="mainController">
+<body>
 <div ng-view>
   
 </div>
