--- a/react-sample-app/pages/list.html
+++ b/react-sample-app/pages/list.html
@@ -1,7 +1,9 @@
 
 <div class="row">
   <div class="col-sm-4">
-  	This is Friend List
+  	<ul class="list-group" ng-repeat ="friend in friend_list">
+       <li class="list-group-item"><span class="badge">{{friend.status}}</span>{{friend.name}}</li>	  
+    </ul>    
   </div>
   <div class="col-sm-8">
   	
