Add Active friends List

--- a/react-sample-app/index.html
+++ b/react-sample-app/index.html
@@ -2,6 +2,8 @@
 <html ng-app="sampleApp">
 <head>
 	<title>Home</title>	
+  <meta name="viewport" content="initial-scale=1.0">
+  <meta charset="utf-8">
   <script src="js/bootstrap.min.js"></script>
   <script src="js/bootstrap.js"></script>
   <script src="js/angular.js"></script>
