--- a/react-sample-app/index.html
+++ b/react-sample-app/index.html
@@ -17,7 +17,8 @@
             <nav class="navbar navbar-default">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="/">Chat me App</a>
+                <a href="#/"> <img src="img/logo.png" alt="" height="50px"></a>
+                    <!-- <a class="navbar-brand" href="/">Chat me App</a> -->
                 </div>
 
                 <ul class="nav navbar-nav navbar-right">
