--- a/react-sample-app/pages/list.html
+++ b/react-sample-app/pages/list.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-sm-4">
   	<ul class="list-group" ng-repeat ="friend in friend_list">
-       <li class="list-group-item"><span class="badge">{{friend.status}}</span>{{friend.name}}</li>	  
+       <a href="#chat"> <li class="list-group-item"><span class="badge">{{friend.status}}</span>{{friend.name}}</li>	 </a> 
     </ul>    
   </div>
   <div class="col-sm-8">
