--- a/react-sample-app/pages/login.html
+++ b/react-sample-app/pages/login.html
@@ -1,44 +1,48 @@
-<div id="page-wrapper">    
+<div ng-app="sampleApp" ng-controller="LoginController">
+    <div id="page-wrapper">
         <div class="col-center-block">
             <div class="panel panel-green">
                 <div class="panel-heading"><strong class="">Login</strong>
                 </div>
-                <div class="panel-body">                    
-                        <div class="form-group">
-                            <label for="email" class="col-sm-3 control-label">UserName</label>
+                <div class="panel-body">
+                    <div class="form-group">
+                        <label for="email" class="col-sm-3 control-label">UserName</label>
 
-                            <div class="col-sm-9">
-                                <input path="userName" type="text" class="form-control" id="userName"
-                                            placeholder="UserName"/>
+                        <div class="col-sm-9">
+                            <input path="userName" type="text" class="form-control" id="userName"
+                                   placeholder="UserName" ng-model="userName"/>
+                        </div>
+                    </div>
+                    <br></br>
+
+                    <div class="form-group">
+                        <label for="password" class="col-sm-3 control-label">Password</label>
+
+                        <div class="col-sm-9">
+                            <input path="password" type="password" class="form-control" id="password"
+                                   placeholder="Password" ng-model="password"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-3 col-sm-9">
+                            <div class="checkbox">
+                                <label class="">
+                                    <input type="checkbox" class="">Remember me</label>
                             </div>
                         </div>
-                        <br></br>
-                        <div class="form-group">
-                            <label for="password" class="col-sm-3 control-label">Password</label>
-
-                            <div class="col-sm-9">
-                                <input path="password" type="password" class="form-control" id="password"
-                                            placeholder="Password"/>
-                            </div>
-                        </div>                        
-                        <div class="form-group">
-                            <div class="col-sm-offset-3 col-sm-9">
-                                <div class="checkbox">
-                                    <label class="">
-                                        <input type="checkbox" class="">Remember me</label>
-                                </div>
-                            </div>
-                        </div>                        
-                        <div class="form-group last">
-                            <div class="col-sm-offset-3 col-sm-9">
-                                <button type="submit" class="btn btn-success btn-sm">Sign in</button>
-                                <button type="reset" class="btn btn-default btn-sm">Reset</button>
-                            </div>
+                    </div>
+                    <div class="form-group last">
+                        <div class="col-sm-offset-3 col-sm-9">
+                            <button type="submit" class="btn btn-success btn-sm" ng-click="SendData()">Sign in</button>
+                            <button type="reset" class="btn btn-default btn-sm">Reset</button>
                         </div>
-                    
+                    </div>
+
                 </div>
                 <div class="panel-footer">Not Registered? <a href="#" class="">Register here</a>
                 </div>
+                {{ Response }}
             </div>
-            </div>
-<div>
+        </div>
+        <div>
+        </div>
