--- a/react-sample-app/index.html
+++ b/react-sample-app/index.html
@@ -4,10 +4,16 @@
     <title>Home</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
+    <script src="http://www.google.com/jsapi"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/angular.js"></script>
     <script src="js/angular-route.js"></script>
+    <script src="js/angular-local-storage.js"></script>
+    <script src="js/angular-local-storage.min.js"></script>
+    <script src="js/Chart.js"></script>
+    <script src="js/chartkick.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/angular-demo.css" rel="stylesheet">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css"/>
