--- a/react-sample-app/pages/login.html
+++ b/react-sample-app/pages/login.html
@@ -39,7 +39,7 @@
                     </div>
 
                 </div>
-                <div class="panel-footer">Not Registered? <a href="#" class="">Register here</a>
+                <div class="panel-footer">Not Registered? <a href="#register/" class="">Register here</a>
                 </div>
                 {{ Response }}
             </div>
