Product API configuration addded

--- a/react-sample-app/pages/list.html
+++ b/react-sample-app/pages/list.html
@@ -24,12 +24,9 @@
             </ul>
         </div>
         <div class="col-sm-8">
-            <h1>Friend's Locations</h1>
+            <a href="#products/"><h3>Friend's Locations</h3></a>
 
-            <div id="chart-8" style="height: 350px;"></div>
-            <script>
-                new Chartkick.GeoChart("chart-8", [["United States", 44], ["Germany", 23], ["Brazil", 22], ["Canada", 21], ["France", 13], ['Srilanka', 70]]);
-            </script>
+
         </div>
     </div>
 </div>
