Products list Updated

--- a/react-sample-app/pages/products.html
+++ b/react-sample-app/pages/products.html
@@ -1,6 +1,7 @@
 <div ng-app="sampleApp" ng-controller="ProductsController">
     <div id="container">
         <div class="row" style="margin-left: 2%;margin-right: 2%">
+            <h3>Burger Categories</h3>
             <ul class="list-group" ng-repeat="product in product_list">
                 <div class="col-sm-2">
                     <div class="panel panel-default">
