Rule creator Rule-block Updated

--- a/react-sample-app/index.html
+++ b/react-sample-app/index.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
     <script src="http://www.google.com/jsapi"></script>
@@ -19,9 +18,19 @@
     <script src="js/angular-local-storage.min.js"></script>
     <script src="js/Chart.js"></script>
     <script src="js/chartkick.js"></script>
+
+    <script src="js/bootstrap-select.js"></script>
+    <script src="js/bootstrap-select.min.js"></script>
+
+
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/angular-demo.css" rel="stylesheet">
+
+    <link href="css/bootstrap-select.css" rel="stylesheet">
+    <link href="css/bootstrap-select.min.css" rel="stylesheet">
+
+
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css"/>
     <script src="app.js"></script>
 </head>
