--- a/react-sample-app/pages/rule.html
+++ b/react-sample-app/pages/rule.html
@@ -1,6 +1,6 @@
 <div ng-app="sampleApp" ng-controller="RuleController">
     <div class="row">
-        <div class="col-sm-3" style="background-color:lavender;">
+        <div class="col-sm-3">
             <div class="dropdown">
                 <button class="btn btn-default dropdown-toggle"
                         type="button"
@@ -21,7 +21,7 @@
                 </ul>
             </div>
         </div>
-        <div class="col-sm-3" style="background-color:lavenderblush;">
+        <div class="col-sm-3">
             <div class="dropdown">
                 <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
                     Aggregation Type
@@ -33,7 +33,7 @@
                 </ul>
             </div>
         </div>
-        <div class="col-sm-3" style="background-color:lavender;">
+        <div class="col-sm-3">
             <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
                 Conditions
                 <span class="caret"></span></button>
