Rule schema updated

--- a/react-sample-app/index.html
+++ b/react-sample-app/index.html
@@ -33,6 +33,7 @@
 
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css"/>
     <script src="app.js"></script>
+    <link rel="icon" href="img/logo.png" sizes="16x16">
 </head>
 <header>
     <nav class="navbar navbar-default">
