--- a/react-sample-app/index.html
+++ b/react-sample-app/index.html
@@ -7,6 +7,8 @@
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
     <script src="http://www.google.com/jsapi"></script>
     <script src="js/jquery.min.js"></script>
@@ -18,6 +20,7 @@
     <script src="js/angular-local-storage.min.js"></script>
     <script src="js/Chart.js"></script>
     <script src="js/chartkick.js"></script>
+    <script src="js/dhtmlx.js"></script>
 
     <script src="js/bootstrap-select.js"></script>
     <script src="js/bootstrap-select.min.js"></script>
@@ -26,6 +29,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/angular-demo.css" rel="stylesheet">
+    <link href="css/dhtmlx.css" rel="stylesheet">
 
     <link href="css/bootstrap-select.css" rel="stylesheet">
     <link href="css/bootstrap-select.min.css" rel="stylesheet">
